#13 Refactor package structure for Utilities and Logger, enhance `WebsiteAnalyzer` reporting logic, and update test coverage for edge cases